--- a/src/resources/message_zh_CN.properties
+++ b/src/resources/message_zh_CN.properties
@@ -8,3 +8,7 @@ username.exist = \u7528\u6237\u540D\u5DF2\u7ECF\u5B58\u5728
 useremail.exist = \u90AE\u7BB1\u5DF2\u7ECF\u5B58\u5728
 useremail.notexist = \u90AE\u7BB1\u4E0D\u5B58\u5728
 userpasswd.error = \u5BC6\u7801\u9519\u8BEF
+video.name.required = \u89C6\u9891\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+video.type.required = \u89C6\u9891\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+video.score.required = \u89C6\u9891\u8BC4\u5206\u4E0D\u80FD\u4E3A\u7A7A
+video.score.error = \u89C6\u9891\u8BC4\u5206\u683C\u5F0F\u9519\u8BEF
