--- a/src/resources/message_zh_CN.properties
+++ b/src/resources/message_zh_CN.properties
@@ -12,3 +12,4 @@ video.name.required = \u89C6\u9891\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
 video.type.required = \u89C6\u9891\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
 video.score.required = \u89C6\u9891\u8BC4\u5206\u4E0D\u80FD\u4E3A\u7A7A
 video.score.error = \u89C6\u9891\u8BC4\u5206\u683C\u5F0F\u9519\u8BEF
+video.starring.error = \u4E3B\u6F14\u5FC5\u987B\u5C0F\u4E8E12\u5B57
